force-app/main/default/objects/MUSW__Master_Distribution_List__c/MUSW__Master_Distribution_List__c.object-meta.xml
<CustomObject>
    <label>Distribution Template</label>
    <nameField>
        <label>Distribution Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>