force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>TextArea</type>
</CustomField>