force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Business_Event__c.field-meta.xml
<CustomField>
    <fullName>Business_Event__c</fullName>
    <label>Business Event</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>