force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Credit_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Code__c</fullName>
    <label>Credit Code</label>
    <type>TextArea</type>
</CustomField>