force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Debit_Code__c.field-meta.xml
<CustomField>
    <fullName>Debit_Code__c</fullName>
    <label>Debit Code</label>
    <type>TextArea</type>
</CustomField>