force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>&quot;=Today()&quot;</defaultValue>
    <label>Effective Date</label>
    <type>TextArea</type>
</CustomField>