force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Old_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Amount__c</fullName>
    <label>Old Amount</label>
    <type>TextArea</type>
</CustomField>