force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Transaction_Account__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Account__c</fullName>
    <label>Transaction Account</label>
    <type>TextArea</type>
</CustomField>