force-app/main/default/objects/MUSW__Master_Distribution_List__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>TextArea</type>
</CustomField>