force-app/main/default/objects/MUSW__Master_Distribution_List__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>Business_Event__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Credit_Code__c</columns>
    <columns>Debit_Code__c</columns>
    <columns>Transaction_Account__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <columns>Old_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>